@@ -4640,6 +4640,8 @@ v0.33.20        10-Feb-2002
 		Reduced aka match level for (dis)connect areas to zone, net.
 		This should fix problems on systems with multiple aka's when
 		the first aka is not the aka in the areas.
+		In mgr result reports, lines with connected areas do now also
+		display the aka to which they are connected.
 
 	mball:
 		Will not crash anymore when it needs more then 10 minutes to
